@@ -11,6 +11,9 @@ include::include.adoc[]
 
 === Misc
 * Add support for <<extensions.adoc#extension-store,keeping state in extensions>>
+* Add support for parameter injection of `@TempDir`
+* Improve `@TempDir` field injection, now it happens before field initialization, so it can be used by other field initializers.
+* Fix exception when configured `baseDir` was not existing, now `@TempDir` will create the baseDir directory if it is missing.
 
 == 2.4-M1 (2022-11-30)
 
